<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cs_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp"
        android:background="@color/blue_main_background">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="20sp"
            android:textColor="#9CB0D4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textColor="@color/blue_main_text_bold"
            android:fontFamily="@font/gilroy_bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/horizone_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DAE5F2"
        app:layout_constraintTop_toBottomOf="@id/cs_topBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cs_mainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizone_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_mainView_part1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHeight_percent="0.4"
            android:background="@color/blue_main_background"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cs_part1_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cs_part1_left"
                app:layout_constraintWidth_percent="0.5">

                <TextView
                    android:id="@+id/tv_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/status"
                    android:fontFamily="@font/gilroy_regular"
                    android:textSize="18sp"
                    android:textColor="@color/blue_main_text_regular"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/tv_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_status_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="Không kết nối"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="22sp"
                    android:textColor="@color/blue_main_text_bold"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.5">

                <TextView
                    android:id="@+id/tv_timeConnect_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/time"
                    android:fontFamily="@font/gilroy_regular"
                    android:textSize="18sp"
                    android:textColor="@color/blue_main_text_regular"
                    android:layout_marginTop="16dp"
                    android:gravity="end" />

                <Chronometer
                    android:id="@+id/chronometer_timeConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_timeConnect_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="--:--:--"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="22sp"
                    android:textColor="@color/blue_main_text_bold"
                    android:gravity="end"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cs_mainView_part2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cs_mainView_part1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHeight_percent="0.6"
            android:background="#ECF4FD" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_startStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/cs_mainView_part2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="-125dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/power"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_intro_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_startStop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rounded_corner_50"
            android:drawableLeft="@drawable/shield_icon"
            android:text="@string/transmission_is_protected"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="17sp"
            android:backgroundTint="#CCFFCC"/>

        <TextView
            android:id="@+id/tv_intro_insecure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_startStop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rounded_corner_50"
            android:drawableLeft="@drawable/warning_icon"
            android:text="@string/transmission_is_not_protect"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="17sp"
            android:backgroundTint="#CC3300"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>